--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
             </section>
         </section>
         <section class="principal__derecha">
-            <img src="./assets/Muneco.png" alt="Muñeco">
-            <p class="principal__salida_mensaje_inicial"> Ningún mensaje fue encontrado</p>
-            <p class="principal__salida_mensaje_inicial_pequeno"> Ingresa el texto que desees encriptar o desencriptar.</p>
+            <div>
+                <img src="./assets/Muneco.png" alt="Muñeco">
+            </div>
+            <div>
+                <p class="principal__salida_mensaje_inicial"> Ningún mensaje fue encontrado</p>
+                <p class="principal__salida_mensaje_inicial_pequeno"> Ingresa el texto que desees encriptar o desencriptar.</p>
+            </div>
         </section>
     </main>
     <footer></footer>
