--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h6 class="principal__botones__etiqueta">Solo letras minúsculas y sin acentos </h6>
             </div>
             <div class="botones">
-                <input  class="btn_encriptar" type="button" value="Encriptar">
+                <input  class="btn_encriptar" onclick="botonEncriptar();" type="button" value="Encriptar">
                 <input  class="btn_desencriptar" type="button" value="Desencriptar">
             </div>
         </section>
