Luchando con el dom

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="botones">
                 <input  class="btn_encriptar" onclick="botonEncriptar();" type="button" value="Encriptar">
-                <input  class="btn_desencriptar" type="button" value="Desencriptar">
+                <input  class="btn_desencriptar"  onclick="botonDesencriptar()" type="button" value="Desencriptar">
             </div>
         </section>
         <section class="principal__derecha">
