Antes de validar ingreso en el textarea

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p class="principal__salida_mensaje_inicial_pequeno"> Ingresa el texto que desees encriptar o desencriptar.</p>
             </div>
             <div>
-                <button class="btn_copiar">Copiar</button>
+                <button class="btn_copiar" onclick="copiarContenido();">Copiar</button>
           <!--   <div>
                 <img src="./assets/Muneco.png" alt="Muñeco">
             </div> -->
