--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section>
         <section class="principal__derecha">
             
-            <textarea class="text-area_mensaje" cols="20" rows="10" ></textarea>   
+            <textarea class="text-area_mensaje" auto ></textarea>   
              <!--<img src="./assets/Muneco.png" alt="Muñeco">-->
 
            
