con media query para movil

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+        Creado Por Orlando Rozas
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
