--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
  
     </main>
  
-    <footer class="footer">
+    <footer >
  
-        Creado Por Orlando Rozas
+       <p class="footer">Creado Por Orlando Rozas</p>  
  
     </footer>
     <script src="script.js"></script>
